[package]
name = "nam-supraseal-c2"
version = "0.1.2-nam.0"
edition = "2021"
license = "Apache-2.0"
description = "CUDA Groth16 proof generator for Filecoin"
repository = "https://github.com/supranational/supra_seal"

[dependencies]
blst = { package = "nam-blst", version = "0.3.15-nam.0", default-features = true }
sppark = { version = "^0.1.13", features = ["cuda"] }

[features]
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
quiet = []

[build-dependencies]
cc = { version = "^1.0.70", features = ["parallel"] }
sppark = { version = "^0.1.13", features = ["build"] }
